--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "illuminate/redis": "^5.0",
         "laravel/lumen-framework": "5.6.*",
         "predis/predis": "~1.0",
-        "ramsey/uuid": "^3.7",
+        "ramsey/uuid": "^3.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
